served in secure protocol

--- a/templates/index.html
+++ b/templates/index.html
@@ -349,7 +349,7 @@
 
 <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.perfect-scrollbar/0.7.0/js/perfect-scrollbar.jquery.min.js" integrity="sha256-G7x5vTR7iVBtZ10VflIkF/XJzfzAuS0tE6AFIb4d9FQ=" crossorigin="anonymous"></script>
-<script src="http://3Dmol.csb.pitt.edu/build/3Dmol-nojquery.js"></script>
+<script src="https://3Dmol.csb.pitt.edu/build/3Dmol-nojquery.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/3.9.1/math.min.js" integrity="sha256-idZIhOSjc6XLASkM1rlo2qEhVdT73C+DwPGcWQ1KlsM=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jQuery-Knob/1.2.13/jquery.knob.min.js" integrity="sha256-2144q+NOM/XU6ZxSqRTJ8P0W/CkY6zXc6mXYt4+mF9s=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/blueimp-file-upload/9.18.0/js/vendor/jquery.ui.widget.min.js" integrity="sha256-PSJreqTN+fSOXC0tOnMm2+LKe92f/Oob0VKfGiCVvkw=" crossorigin="anonymous"></script>
